--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,46 @@
-/**style CSS de tout notre site**/
-body {
-    background-color:#FFF3E2;
+/**style CSS du header**/
+header {
+    background-color:white;
 }
 
 /**style CSS de notre logo**/
 header h1 {
-    height: 100px; /**définit la hauteur de notre header**/
+    height: 40px; /**définit la hauteur de notre header**/
     display: flex;
     justify-content: left;
     align-items: center;
     font-size: 50px; /**définit la taille de notre police**/  
     font-family: 'Pacifico', cursive;
+    margin-left: 20px;
+    margin-top:50px;
+}
+
+/**style CSS du contact tel dans le header**/
+#entete {
+    display: flex;
+    flex-direction: row;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+}
+
+#imgTel {
+    width:40px;
+    height:40px;
+    margin-left: 1050px;
+    margin-top: 50px;
+}
+
+#entete a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    margin-top: 55px;
+    font-weight: bold;
+}
+
+/**style CSS de l'image accueil**/
+.imgHome {
+    height:400px;
+    width:100%;
 }
 
 /**style css menu navigation**/
@@ -25,12 +55,6 @@ ul {
 a {
     text-decoration: none;
     color:black
-}
-
-/**style CSS de notre image**/
-img {
-    height:400px;
-    width:100%;
 }
 
 /**style css partie présentation**/
