--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,43 @@ section h2 {
     height: 80px;
 }
 
+/**style CSS page Expositions**/
+.expositions {
+    background-color:#FFF3E2 ;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+}
+
+.expoBlock {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 10px;
+    border-bottom: 10px solid white
+}
+
+.expoBlock p {
+    width:60%;
+    text-align: center;
+    margin: 5% 5%;
+    padding: 25px;
+}
+
+.expoblockImg {
+    width:40%;
+    border-left:4px solid #B9B5B5 ;
+}
+
+.expoblockImg img {
+    width:330px;
+    height:220px;
+    margin-left:130px;
+    margin-top:40px;
+    margin-right:10px;
+    box-shadow: #B9B5B5 15px 15px 0px;
+}
+
+
 /**style css du footer **/
 footer{
     background-color: #B9B5B5;
