--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ img {
     text-align:center;
 }
 
+
 section h2 {
     font-size:30px;
     text-align:center;
@@ -77,3 +78,48 @@ footer{
     width: 80px;
     height: 80px;
 }
+
+/**style css page realisation**/
+
+.realisations{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+}
+
+.realblockImg{
+    width: 50%;
+}
+
+.realblockImg img{
+    width: 600px;
+    height: 400px;
+    margin-left: 10px;
+    margin-top: 40px;
+}
+
+.realisationBlock{
+    display:flex ;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 10px;
+}
+
+.realisationTop p{
+    text-align: center;
+    margin: 5px 5px;
+}
+
+.realisationTop {
+    width: 50%;
+}
+
+.realisationMiddle{
+    width: 50%;
+    
+}
+
+.realisationMiddle p{
+    text-align: center;
+    margin: 5px 5px;
+}
+
